<resources>
    <string name="app_name">Money_Lover</string>
    <string name="dang_ky">lần đầu sử dụng money lover</string>
    <string name="dang_nhap">đã sử dụng money lover</string>
    <string name="form_dang_ky">Đăng ký bằng email</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="dang_nhap1">Đăng Nhập</string>
    <string name="dang_ky2">đăng ký</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="form_dang_nhap">Đăng nhập</string>
    <string name="them_stk">Thêm sổ tiết kiệm</string>
    <string name="ma_so">Mã số</string>
    <string name="ngay_gui">Ngày gữi</string>
    <string name="ky_han">Kỳ hạn </string>
    <string name="lai_suat_k_ky_han">Lãi suất không kỳ hạn (%)</string>
    <string name="ngan_hang">Ngân hàng</string>
    <string name="so_tien_gui">Số tiền gữi (vnđ)</string>
    <string name="lai_suat">Lãi suất (%/Năm)</string>
    <string name="tra_lai">Trả lãi</string>
    <string name="khi_dem_han">Khi đến hạn</string>
    <string name="huy">Hủy</string>
    <string name="stk">Sổ tiết kiệm</string>
    <string name="ten_ngan_hang">Tên ngân hàng</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="gui_them_tien">Gữi thêm tiền</string>
    <string name="chi_tiet_tk">Chi tiết tài khoản</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="stt">STT</string>
    <string name="xem_chi_tiet">Xem CT</string>
    <string name="them">Thêm</string>
    <string name="ngan_hang_them">Ngân Hàng:</string>
    <string name="them_ngan_hang">Thêm Ngân Hàng</string>
    <string name="lichsu">Lịch sử tất toán</string>
    <string name="sua_stk">Sửa sổ tiết kiệm</string>
    <string name="rut_mot_phan">Rút một phần</string>
    <string name="tat_toan">Tất toán</string>
</resources>
