<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/edt_them_tk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/them_stk"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/ngay_gui"
            android:textSize="17sp" />

        <TextView
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:id="@+id/edt_ngay_them_tk"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:configChanges="orientation|screenSize"
            android:hint="@string/ngay_gui" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:id="@+id/txt"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/ngan_hang_them"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/txt" />

        <Button
            android:background="@color/green"
            android:textColor="@android:color/white"
            android:id="@+id/btn_them_ngan_hang"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:text="@string/them" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/so_tien_gui"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edt_so_tien_gui"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/so_tien_gui"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/ky_han"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/lai_suat"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/edt_lai_suat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:textSize="17sp"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/lai_suat_k_ky_han"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/edt_lai_suat_k_ky_han"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/tra_lai"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="@color/chu_de"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/khi_dem_han"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_them_tk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_huy_them_tk"
            android:layout_marginBottom="20dp"
            android:background="@color/green"
            android:text="@string/them_stk"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_huy_them_tk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/vien_den"
            android:text="@string/huy"
            android:textColor="@color/green" />
    </RelativeLayout>
</LinearLayout>