<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/them_ngan_hang"/>
    <EditText
        android:id="@+id/edt_them_ngan_hang"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/ngan_hang"/>
    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_them_ngan_hang2"
        android:text="@string/them_ngan_hang"
        android:background="@color/green"
        android:textColor="@android:color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"/>
    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_huy_them_ngan_hang"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/huy"
        android:background="@drawable/vien_den"
        android:textColor="@color/green"/>
</LinearLayout>