<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:id="@+id/show_stt_ls"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/stt"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_so_tien_gui_ls"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/stt"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_kyhan_ls"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ky_han"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_lai_suat_ls"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/stt"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_ngay_gui_ls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/ngay_gui"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>